--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <article class="full-page">
     <figure class="audio" style="display: none">
-        <audio class="audio-file" autoplay src="assets/gradation.mp3"></audio>
+        <audio class="audio-file" src="assets/gradation.mp3"></audio>
     </figure>
     <section class="album active">
         <div class="disk">
