mobile and other songs.

--- a/index.html
+++ b/index.html
@@ -13,12 +13,196 @@
     <figure class="audio" style="display: none">
         <audio class="audio-file" type="audio/mpeg" src="https://howdyfrom2019.github.io/threeJS-practice/assets/gradation.mp3"></audio>
     </figure>
+    <figure class="audio" style="display: none">
+        <audio class="audio-file" type="audio/mpeg" src="assets/afterlike.mp3"></audio>
+    </figure>
+    <figure class="audio" style="display: none">
+        <audio class="audio-file" type="audio/mpeg" src="assets/nxde.mp3"></audio>
+    </figure>
+    <figure class="audio" style="display: none">
+        <audio class="audio-file" type="audio/mpeg" src="assets/starwalkin.mp3"></audio>
+    </figure>
+    <figure class="audio" style="display: none">
+        <audio class="audio-file" type="audio/mpeg" src="assets/iwantto.mp3"></audio>
+    </figure>
     <section class="album active">
         <div class="disk">
             <div class="disk_inner"></div>
         </div>
         <a href="https://www.youtube.com/watch?v=VQZXXciZb_c" target="blank" class="coverImg">
             <img src="assets/gradation.png" alt="그라데이션">
+        </a>
+        <svg class="handle-btn play visible" width="56" height="64" viewBox="0 0 56 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g filter="url(#filter0_d_8_2)">
+                <path d="M52 28L4 55.7128L4 0.287185L52 28Z" fill="white" fill-opacity="1" shape-rendering="crispEdges"/>
+            </g>
+            <defs>
+                <filter id="filter0_d_8_2" x="0" y="0.287231" width="56" height="63.4255" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                    <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                    <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                    <feOffset dy="4"/>
+                    <feGaussianBlur stdDeviation="2"/>
+                    <feComposite in2="hardAlpha" operator="out"/>
+                    <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+                    <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_8_2"/>
+                    <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_8_2" result="shape"/>
+                </filter>
+            </defs>
+        </svg>
+        <svg class="handle-btn pause invisible" width="45" height="64" viewBox="0 0 45 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g filter="url(#filter0_d_9_5)">
+                <rect x="4" width="12" height="56" fill="white"/>
+                <rect x="29" width="12" height="56" fill="white"/>
+            </g>
+            <defs>
+                <filter id="filter0_d_9_5" x="0" y="0" width="45" height="64" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                    <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                    <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                    <feOffset dy="4"/>
+                    <feGaussianBlur stdDeviation="2"/>
+                    <feComposite in2="hardAlpha" operator="out"/>
+                    <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+                    <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_9_5"/>
+                    <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_9_5" result="shape"/>
+                </filter>
+            </defs>
+        </svg>
+    </section>
+    <section class="album">
+        <div class="disk">
+            <div class="disk_inner"></div>
+        </div>
+        <a href="https://www.youtube.com/watch?v=VQZXXciZb_c" target="blank" class="coverImg">
+            <img src="assets/afterlike.jpg" alt="after like">
+        </a>
+        <svg class="handle-btn play visible" width="56" height="64" viewBox="0 0 56 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g filter="url(#filter0_d_8_2)">
+                <path d="M52 28L4 55.7128L4 0.287185L52 28Z" fill="white" fill-opacity="1" shape-rendering="crispEdges"/>
+            </g>
+            <defs>
+                <filter id="filter0_d_8_2" x="0" y="0.287231" width="56" height="63.4255" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                    <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                    <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                    <feOffset dy="4"/>
+                    <feGaussianBlur stdDeviation="2"/>
+                    <feComposite in2="hardAlpha" operator="out"/>
+                    <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+                    <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_8_2"/>
+                    <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_8_2" result="shape"/>
+                </filter>
+            </defs>
+        </svg>
+        <svg class="handle-btn pause invisible" width="45" height="64" viewBox="0 0 45 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g filter="url(#filter0_d_9_5)">
+                <rect x="4" width="12" height="56" fill="white"/>
+                <rect x="29" width="12" height="56" fill="white"/>
+            </g>
+            <defs>
+                <filter id="filter0_d_9_5" x="0" y="0" width="45" height="64" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                    <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                    <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                    <feOffset dy="4"/>
+                    <feGaussianBlur stdDeviation="2"/>
+                    <feComposite in2="hardAlpha" operator="out"/>
+                    <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+                    <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_9_5"/>
+                    <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_9_5" result="shape"/>
+                </filter>
+            </defs>
+        </svg>
+    </section>
+    <section class="album">
+        <div class="disk">
+            <div class="disk_inner"></div>
+        </div>
+        <a href="https://www.youtube.com/watch?v=VQZXXciZb_c" target="blank" class="coverImg">
+            <img src="assets/nxde.jpg" alt="nxde">
+        </a>
+        <svg class="handle-btn play visible" width="56" height="64" viewBox="0 0 56 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g filter="url(#filter0_d_8_2)">
+                <path d="M52 28L4 55.7128L4 0.287185L52 28Z" fill="white" fill-opacity="1" shape-rendering="crispEdges"/>
+            </g>
+            <defs>
+                <filter id="filter0_d_8_2" x="0" y="0.287231" width="56" height="63.4255" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                    <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                    <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                    <feOffset dy="4"/>
+                    <feGaussianBlur stdDeviation="2"/>
+                    <feComposite in2="hardAlpha" operator="out"/>
+                    <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+                    <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_8_2"/>
+                    <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_8_2" result="shape"/>
+                </filter>
+            </defs>
+        </svg>
+        <svg class="handle-btn pause invisible" width="45" height="64" viewBox="0 0 45 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g filter="url(#filter0_d_9_5)">
+                <rect x="4" width="12" height="56" fill="white"/>
+                <rect x="29" width="12" height="56" fill="white"/>
+            </g>
+            <defs>
+                <filter id="filter0_d_9_5" x="0" y="0" width="45" height="64" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                    <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                    <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                    <feOffset dy="4"/>
+                    <feGaussianBlur stdDeviation="2"/>
+                    <feComposite in2="hardAlpha" operator="out"/>
+                    <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+                    <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_9_5"/>
+                    <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_9_5" result="shape"/>
+                </filter>
+            </defs>
+        </svg>
+    </section>
+    <section class="album">
+        <div class="disk">
+            <div class="disk_inner"></div>
+        </div>
+        <a href="https://www.youtube.com/watch?v=VQZXXciZb_c" target="blank" class="coverImg">
+            <img src="assets/starwalkin.jpg" alt="star-walkin">
+        </a>
+        <svg class="handle-btn play visible" width="56" height="64" viewBox="0 0 56 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g filter="url(#filter0_d_8_2)">
+                <path d="M52 28L4 55.7128L4 0.287185L52 28Z" fill="white" fill-opacity="1" shape-rendering="crispEdges"/>
+            </g>
+            <defs>
+                <filter id="filter0_d_8_2" x="0" y="0.287231" width="56" height="63.4255" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                    <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                    <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                    <feOffset dy="4"/>
+                    <feGaussianBlur stdDeviation="2"/>
+                    <feComposite in2="hardAlpha" operator="out"/>
+                    <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+                    <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_8_2"/>
+                    <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_8_2" result="shape"/>
+                </filter>
+            </defs>
+        </svg>
+        <svg class="handle-btn pause invisible" width="45" height="64" viewBox="0 0 45 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g filter="url(#filter0_d_9_5)">
+                <rect x="4" width="12" height="56" fill="white"/>
+                <rect x="29" width="12" height="56" fill="white"/>
+            </g>
+            <defs>
+                <filter id="filter0_d_9_5" x="0" y="0" width="45" height="64" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                    <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                    <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                    <feOffset dy="4"/>
+                    <feGaussianBlur stdDeviation="2"/>
+                    <feComposite in2="hardAlpha" operator="out"/>
+                    <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+                    <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_9_5"/>
+                    <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_9_5" result="shape"/>
+                </filter>
+            </defs>
+        </svg>
+    </section>
+    <section class="album">
+        <div class="disk">
+            <div class="disk_inner"></div>
+        </div>
+        <a href="https://www.youtube.com/watch?v=VQZXXciZb_c" target="blank" class="coverImg">
+            <img src="assets/iwantto.jpg" alt="i-want-to">
         </a>
         <svg class="handle-btn play visible" width="56" height="64" viewBox="0 0 56 64" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g filter="url(#filter0_d_8_2)">
@@ -70,8 +254,6 @@
     <nav class="dots">
         <ul>
             <li class="circle active" />
-            <li class="circle"/>
-            <li class="circle"/>
             <li class="circle"/>
             <li class="circle"/>
             <li class="circle"/>
