card project set

--- a/player/index.html
+++ b/player/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <title>플레이리스트 2022.10</title>
-    <link rel="stylesheet" type="text/css" href="css/reset.css" />
-    <link rel="stylesheet" type="text/css" href="css/motion.css" />
+    <link rel="stylesheet" type="text/css" href="Desktop/development/threeJS-practice/css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="Desktop/development/threeJS-practice/css/motion.css" />
 </head>
 <body>
 <article class="full-page">
@@ -14,23 +14,23 @@
         <audio class="audio-file" type="audio/mpeg" src="https://howdyfrom2019.github.io/threeJS-practice/assets/gradation.mp3"></audio>
     </figure>
     <figure class="audio" style="display: none">
-        <audio class="audio-file" type="audio/mpeg" src="assets/afterlike.mp3"></audio>
+        <audio class="audio-file" type="audio/mpeg" src="Desktop/development/threeJS-practice/assets/afterlike.mp3"></audio>
     </figure>
     <figure class="audio" style="display: none">
-        <audio class="audio-file" type="audio/mpeg" src="assets/nxde.mp3"></audio>
+        <audio class="audio-file" type="audio/mpeg" src="Desktop/development/threeJS-practice/assets/nxde.mp3"></audio>
     </figure>
     <figure class="audio" style="display: none">
-        <audio class="audio-file" type="audio/mpeg" src="assets/starwalkin.mp3"></audio>
+        <audio class="audio-file" type="audio/mpeg" src="Desktop/development/threeJS-practice/assets/starwalkin.mp3"></audio>
     </figure>
     <figure class="audio" style="display: none">
-        <audio class="audio-file" type="audio/mpeg" src="assets/iwantto.mp3"></audio>
+        <audio class="audio-file" type="audio/mpeg" src="Desktop/development/threeJS-practice/assets/iwantto.mp3"></audio>
     </figure>
     <section class="album active">
         <div class="disk">
             <div class="disk_inner"></div>
         </div>
         <a href="https://www.youtube.com/watch?v=VQZXXciZb_c" target="blank" class="coverImg">
-            <img src="assets/gradation.png" alt="그라데이션">
+            <img src="Desktop/development/threeJS-practice/assets/gradation.png" alt="그라데이션">
         </a>
         <svg class="handle-btn play visible" width="56" height="64" viewBox="0 0 56 64" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g filter="url(#filter0_d_8_2)">
@@ -73,7 +73,7 @@
             <div class="disk_inner"></div>
         </div>
         <a href="https://www.youtube.com/watch?v=VQZXXciZb_c" target="blank" class="coverImg">
-            <img src="assets/afterlike.jpg" alt="after like">
+            <img src="Desktop/development/threeJS-practice/assets/afterlike.jpg" alt="after like">
         </a>
         <svg class="handle-btn play visible" width="56" height="64" viewBox="0 0 56 64" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g filter="url(#filter0_d_8_2)">
@@ -116,7 +116,7 @@
             <div class="disk_inner"></div>
         </div>
         <a href="https://www.youtube.com/watch?v=VQZXXciZb_c" target="blank" class="coverImg">
-            <img src="assets/nxde.jpg" alt="nxde">
+            <img src="Desktop/development/threeJS-practice/assets/nxde.jpg" alt="nxde">
         </a>
         <svg class="handle-btn play visible" width="56" height="64" viewBox="0 0 56 64" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g filter="url(#filter0_d_8_2)">
@@ -159,7 +159,7 @@
             <div class="disk_inner"></div>
         </div>
         <a href="https://www.youtube.com/watch?v=VQZXXciZb_c" target="blank" class="coverImg">
-            <img src="assets/starwalkin.jpg" alt="star-walkin">
+            <img src="Desktop/development/threeJS-practice/assets/starwalkin.jpg" alt="star-walkin">
         </a>
         <svg class="handle-btn play visible" width="56" height="64" viewBox="0 0 56 64" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g filter="url(#filter0_d_8_2)">
@@ -202,7 +202,7 @@
             <div class="disk_inner"></div>
         </div>
         <a href="https://www.youtube.com/watch?v=VQZXXciZb_c" target="blank" class="coverImg">
-            <img src="assets/iwantto.jpg" alt="i-want-to">
+            <img src="Desktop/development/threeJS-practice/assets/iwantto.jpg" alt="i-want-to">
         </a>
         <svg class="handle-btn play visible" width="56" height="64" viewBox="0 0 56 64" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g filter="url(#filter0_d_8_2)">
@@ -261,6 +261,6 @@
         </ul>
     </nav>
 </article>
-<script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="Desktop/development/threeJS-practice/player/script.js"></script>
 </body>
 </html>
