--- a/card/index.html
+++ b/card/index.html
@@ -1,17 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./css/reset.css" />
     <link rel="stylesheet" type="text/css" href="./css/card.css" />
     
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
-    <script type="text/javascript" src="./js/card.js"></script>
     <title>Seven Poker</title>
 </head>
 <body>
 <h1>Can you beat me?</h1>
 <section>
+    <div class="card">
+        <div class="card-back">
+            <img src="assets/Card%20Back.png" alt="card" />
+        </div>
+    </div>
+    <div class="card">
+        <div class="card-back">
+            <img src="assets/Card%20Back.png" alt="card" />
+        </div>
+    </div>
+    <div class="card">
+        <div class="card-back">
+            <img src="assets/Card%20Back.png" alt="card" />
+        </div>
+    </div><div class="card">
+    <div class="card-back">
+        <img src="assets/Card%20Back.png" alt="card" />
+    </div>
+</div>
 </section>
+<div class="button-wrap">
+    <button type="button">Hit</button>
+    <button type="button">Stay</button>
+</div>
+<script type="text/javascript" src="./js/card.js"></script>
 </body>
 </html>
